chat_client test questions

--- a/chat_client/doc/tests/tests.tex
+++ b/chat_client/doc/tests/tests.tex
@@ -9,7 +9,7 @@
 \usepackage[automark,headsepline,footsepline]{scrpage2} %Kopf- und Fußzeilen
 \usepackage{hyperref}
 
-\ihead{\normalfont Hertzer, Horstmann, Peters, Welling \\ \texttt{chat\_client} Testdaten}
+\ihead{\normalfont Hertzer, Horstmann, Peters, Welling \\ \texttt{chat\_client} Testdata}
 \chead{}
 \ohead{KI-basierte Robotersteuerung \\ Group Knowledge}
 \ifoot{}
@@ -20,61 +20,69 @@
 \setcounter{secnumdepth}{-1}
 
 \begin{document}
-\section{Positionsabfragen}
+\section{Position}
 
 \subsection{Where is the sofa?}
 \begin{tabular}{rl}
-	\texttt{Texteingabe}		& Where is the sofa?	\\
+	\texttt{chat input}		& Where is the sofa?	\\
 	\texttt{Prolog-JSON-Query}	&			\\
 	\texttt{Prolog-JSON-Response}	&			\\
-	\texttt{Textausgabe}		& 			\\
+	\texttt{chat output}		& 			\\
 \end{tabular}
 
-\subsection{Where is the table?}
+\subsection{Where is the table located at?}
 \begin{tabular}{rl}
-	\texttt{Texteingabe}		& Where is the table?	\\
+	\texttt{chat input}		& Where is the table?	\\
 	\texttt{Prolog-JSON-Query}	&			\\
 	\texttt{Prolog-JSON-Response}	&			\\
-	\texttt{Textausgabe}		& 			\\
+	\texttt{chat output}		& 			\\
 \end{tabular}
 
-\subsection{Where is the light switch?}
+\subsection{Where is the light switch found?}
 \begin{tabular}{rl}
-	\texttt{Texteingabe}		& Where is the light switch?	\\
+	\texttt{chat input}		& Where is the light switch?	\\
 	\texttt{Prolog-JSON-Query}	&			\\
 	\texttt{Prolog-JSON-Response}	&			\\
-	\texttt{Textausgabe}		& 			\\
+	\texttt{chat output}		& 			\\
 \end{tabular}
 
 \subsection{Where can I find my coffe?}
 \begin{tabular}{rl}
-	\texttt{Texteingabe}		& Where can I find my coffe?	\\
+	\texttt{chat input}		& Where can I find my coffe?	\\
 	\texttt{Prolog-JSON-Query}	&			\\
 	\texttt{Prolog-JSON-Response}	&			\\
-	\texttt{Textausgabe}		& 			\\
+	\texttt{chat output}		& 			\\
 \end{tabular}
 
 \subsection{Where did I put my glasses?}
 \begin{tabular}{rl}
-	\texttt{Texteingabe}		& Where did I put my glasses?	\\
+	\texttt{chat input}		& Where did I put my glasses?	\\
 	\texttt{Prolog-JSON-Query}	&			\\
 	\texttt{Prolog-JSON-Response}	&			\\
-	\texttt{Textausgabe}		& 			\\
+	\texttt{chat output}		& 			\\
 \end{tabular}
 
-\subsection{Have you seen the TV remote?}
+\subsection{Where have you put the TV remote?}
 \begin{tabular}{rl}
-	\texttt{Texteingabe}		& Have you seen the TV remote?	\\
+	\texttt{chat input}		& Where have you put the TV remote?	\\
 	\texttt{Prolog-JSON-Query}	&			\\
 	\texttt{Prolog-JSON-Response}	&			\\
-	\texttt{Textausgabe}		& 			\\
+	\texttt{chat output}		& 			\\
 \end{tabular}
 
-\subsection{Where did I place my TV?}
+\subsection{Where did Alice place my TV?}
 \begin{tabular}{rl}
-	\texttt{Texteingabe}		& Where did I place my TV?	\\
+	\texttt{chat input}		& Where did I place my TV?	\\
 	\texttt{Prolog-JSON-Query}	&			\\
 	\texttt{Prolog-JSON-Response}	&			\\
-	\texttt{Textausgabe}		& 			\\
+	\texttt{chat output}		& 			\\
+\end{tabular}
+
+\subsection{Where did Bob hang up my paintings?}
+\begin{tabular}{rl}
+	\texttt{chat input}		& Where did Bob hang up my paintings?	\\
+	\texttt{Prolog-JSON-Query}	&			\\
+	\texttt{Prolog-JSON-Response}	&			\\
+	\texttt{chat output}		& 			\\
 \end{tabular}
 \end{document}
